feat: 权限授权相关功能